# p4-constraints

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  AUTHORS  BUILD.bazel  CONTRIBUTING.md  Dockerfile  MODULE.bazel  MODULE.bazel.license  README.md  TODO.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  format.sh  p4_constraints_deps.bzl
.../: BUILD.bazel
.github/workflows/: ci-build-and-unit-test.yml  ci-docker.yml  ci-format.yml  ci-gold-test.yml  ci-native.yml  ci.bazelrc  close-stale-issues.yml  main.yml
docs/: 2020-08-17_LDWG.pdf.license  language-specification.md
e2e-test/: BUILD.bazel  invalid_constraints.expected.output  p4check.bzl  valid_constraints.expected.output
e2e-test/table_entries/: accept_all_entries_1.pb.txt  reject_all_entries_1.pb.txt
e2e_test/: invalid_constraints.expected.output  valid_constraints.expected.output  valid_constraints.p4
e2e_tests/: BUILD.bazel  action_restrictions_invalid.p4  action_restrictions_valid.p4  common.p4  invalid_constraints.expected.output  invalid_constraints.p4  p4check.bzl  valid_constraints.expected.output  valid_constraints.p4
e2e_tests/table_entries/: network_address_table_invalid_ipv4.pb.txt  network_address_table_invalid_ipv6.pb.txt  network_address_table_invalid_mac.pb.txt  network_address_table_valid.pb.txt  network_address_table_valid.pb.txt.license  optional_match_table_invalid_1.pb.txt  optional_match_table_valid_1.pb.txt  optional_match_table_valid_1.pb.txt.license  optional_match_table_valid_max_priority.pb.txt  regression_2022_03_09_table_entry.pb.txt
gutils/: BUILD.bazel  collections.h  ordered_map.h  overload.h  parse_text_proto.h  proto.cc  proto.h  protocol_buffer_matchers.cc  protocol_buffer_matchers.h  ret_check.cc  ret_check.h  source_location.h  status.cc  status.h  status_builder.cc  status_builder.h  status_macros.h  status_matchers.h  statusor.cc  statusor.h  statusor_internals.h  testing.cc  testing.h  testing_test.cc
p4_constraints/: BUILD.bazel  METADATA  ast.cc  ast.h  ast.proto  ast_test.cc  big_int.cc  big_int.h  big_int_test.cc  constraint_source.h  quote.cc  quote.h  ret_check.cc  ret_check.h  source_location.h
p4_constraints/backend/: BUILD.bazel  constraint_info.cc  constraint_info.h  constraint_info_test.cc  errors.cc  errors.h  interpreter.cc  interpreter.h  interpreter_golden_test_runner.cc  interpreter_golden_test_runner.expected  interpreter_golden_test_runner.expected.license  interpreter_test.cc  symbolic_interpreter.cc  symbolic_interpreter.h  symbolic_interpreter_test.cc  type_checker.cc  type_checker.h  type_checker_test.cc
p4_constraints/cli/: BUILD.bazel  p4check.cc
p4_constraints/frontend/: BUILD.bazel  ast_constructors.cc  ast_constructors.h  constraint_kind.h  lexer.cc  lexer.h  lexer_test.cc  parser.cc  parser.h  parser_test.cc  token.cc  token.h  token_test.cc
test/: BUILD.bazel  common.p4  invalid_constraints.expected.output  invalid_constraints.p4  p4check.bzl  valid_constraints.expected.output
test/table_entries/: unknown_table_entry.pb.txt  vrf_classifier_table_1.pb.txt
util/: BUILD.bazel  README.md  canonical_errors.h  parse_text_proto.h  protocol_buffer_matchers.cc  protocol_buffer_matchers.h  ret_check.cc  ret_check.h  source_location.h  status.cc  status.h  status_builder.cc  status_builder.h  status_macros.h  status_matchers.h  statusor.cc  statusor.h  statusor_internals.h
