package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "source_location",
    hdrs = ["source_location.h"],
)

cc_library(
    name = "status",
    srcs = [
        "status.cc",
        "status_builder.cc",
    ],
    hdrs = [
        "status.h",
        "status_builder.h",
        "status_macros.h",
    ],
    deps = [
        ":source_location",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "proto",
    srcs = [
        "proto.cc",
    ],
    hdrs = [
        "proto.h",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf"],
)

cc_library(
    name = "ret_check",
    srcs = ["ret_check.cc"],
    hdrs = ["ret_check.h"],
    deps = [
        ":status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "parse_text_proto",
    hdrs = [
        "parse_text_proto.h",
    ],
    deps = [
        "@com_google_absl//absl/log:check",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "status_matchers",
    testonly = True,
    hdrs = ["status_matchers.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest",
    ],
)

cc_library(
    name = "protocol_buffer_matchers",
    testonly = True,
    srcs = ["protocol_buffer_matchers.cc"],
    hdrs = ["protocol_buffer_matchers.h"],
    deps = [
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
        "@com_google_protobuf//:protobuf",
        "@com_google_protobuf//src/google/protobuf/io",
        "@com_google_protobuf//src/google/protobuf/io:tokenizer",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_library(
    name = "ordered_map",
    hdrs = [
        "ordered_map.h",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_absl//absl/container:btree"],
)

cc_library(
    name = "overload",
    hdrs = ["overload.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "collections",
    hdrs = [
        "collections.h",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "testing",
    testonly = True,
    srcs = ["testing.cc"],
    hdrs = ["testing.h"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_absl//absl/strings"],
)

cc_test(
    name = "testing_test",
    srcs = ["testing_test.cc"],
    deps = [
        ":testing",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
