load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
# GOOGLE ONLY (DO NOT REMOVE): load("//third_party/protobuf/bazel:proto_library.bzl", "proto_library")

load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "big_int",
    srcs = ["big_int.cc"],
    hdrs = ["big_int.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@boost.multiprecision",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "big_int_test",
    size = "small",
    srcs = ["big_int_test.cc"],
    deps = [
        ":big_int",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
    ],
)

cc_library(
    name = "ast",
    srcs = ["ast.cc"],
    hdrs = ["ast.h"],
    deps = [
        ":ast_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/meta:type_traits",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@protobuf",
    ],
)

cc_library(
    name = "constraint_source",
    hdrs = ["constraint_source.h"],
    deps = [":ast_cc_proto"],
)

cc_test(
    name = "ast_test",
    size = "small",
    srcs = ["ast_test.cc"],
    deps = [
        ":ast",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

proto_library(
    name = "ast_proto",
    srcs = ["ast.proto"],
)

cc_proto_library(
    name = "ast_cc_proto",
    deps = [":ast_proto"],
)

cc_library(
    name = "quote",
    srcs = ["quote.cc"],
    hdrs = ["quote.h"],
    deps = [
        ":ast",
        ":ast_cc_proto",
        ":constraint_source",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "ret_check",
    srcs = ["ret_check.cc"],
    hdrs = ["ret_check.h"],
    deps = [
        ":source_location",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "source_location",
    hdrs = ["source_location.h"],
)
