package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "interpreter",
    srcs = ["interpreter.cc"],
    hdrs = ["interpreter.h"],
    linkopts = [
        "-lgmp",
        "-lgmpxx",
    ],
    deps = [
        ":constraint_info",
        "//gutils:ret_check",
        "//gutils:status",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:quote",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "interpreter_test",
    size = "small",
    srcs = ["interpreter_test.cc"],
    linkopts = [
        "-lgmp",
        "-lgmpxx",
    ],
    deps = [
        ":constraint_info",
        ":interpreter",
        "//gutils:parse_text_proto",
        "//gutils:status_matchers",
        "//p4_constraints:ast_cc_proto",
        "@com_github_p4lang_p4runtime//:p4runtime_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "constraint_info",
    srcs = [
        "constraint_info.cc",
        "type_checker.cc",
    ],
    hdrs = [
        "constraint_info.h",
        "type_checker.h",
    ],
    deps = [
        "//gutils:ret_check",
        "//gutils:status",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:quote",
        "//p4_constraints/frontend:lexer",
        "//p4_constraints/frontend:parser",
        "@com_github_google_glog//:glog",
        "@com_github_p4lang_p4runtime//:p4info_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:variant",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_test(
    name = "type_checker_test",
    size = "small",
    srcs = ["type_checker_test.cc"],
    deps = [
        ":constraint_info",
        "//gutils:parse_text_proto",
        "//gutils:status_matchers",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
