load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//e2e_tests:p4check.bzl", "cmd_diff_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "interpreter",
    srcs = ["interpreter.cc"],
    hdrs = ["interpreter.h"],
    deps = [
        ":constraint_info",
        ":errors",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:big_int",
        "//p4_constraints:constraint_source",
        "//p4_constraints:quote",
        "//p4_constraints:ret_check",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/meta:type_traits",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:variant",
        "@gutil//gutil:ordered_map",
        "@gutil//gutil:overload",
        "@gutil//gutil:status",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_test(
    name = "interpreter_test",
    size = "small",
    srcs = ["interpreter_test.cc"],
    deps = [
        ":constraint_info",
        ":interpreter",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:big_int",
        "//p4_constraints:constraint_source",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
    ],
)

cc_library(
    name = "constraint_info",
    srcs = [
        "constraint_info.cc",
        "type_checker.cc",
    ],
    hdrs = [
        "constraint_info.h",
        "type_checker.h",
    ],
    deps = [
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints:quote",
        "//p4_constraints:source_location",
        "//p4_constraints/frontend:constraint_kind",
        "//p4_constraints/frontend:parser",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:optional",
        "@gutil//gutil:status",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4types_cc_proto",
        "@re2",
    ],
)

# go/golden-test-with-coverage
cc_test(
    name = "interpreter_golden_test_runner",
    srcs = ["interpreter_golden_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":constraint_info",
        ":interpreter",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints/frontend:constraint_kind",
        "//p4_constraints/frontend:parser",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:ordered_map",
        "@gutil//gutil:testing",
    ],
)

cmd_diff_test(
    name = "interpreter_golden_test",
    actual_cmd = "$(execpath :interpreter_golden_test_runner)",
    expected = ":interpreter_golden_test_runner.expected",
    tools = [":interpreter_golden_test_runner"],
)

cc_test(
    name = "type_checker_test",
    size = "small",
    srcs = ["type_checker_test.cc"],
    deps = [
        ":constraint_info",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "symbolic_interpreter",
    srcs = [
        "symbolic_interpreter.cc",
    ],
    hdrs = [
        "symbolic_interpreter.h",
    ],
    deps = [
        ":constraint_info",
        ":errors",
        "//p4_constraints:ast",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints/frontend:constraint_kind",
        "//p4_constraints/frontend:parser",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@gutil//gutil:collections",
        "@gutil//gutil:ordered_map",
        "@gutil//gutil:overload",
        "@gutil//gutil:status",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@z3//:z3_static",
    ],
)

cc_library(
    name = "errors",
    srcs = ["errors.cc"],
    hdrs = ["errors.h"],
    deps = [
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints:quote",
        "@abseil-cpp//absl/status:statusor",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "symbolic_interpreter_test",
    srcs = ["symbolic_interpreter_test.cc"],
    deps = [
        ":constraint_info",
        ":interpreter",
        ":symbolic_interpreter",
        "//p4_constraints:ast_cc_proto",
        "//p4_constraints:constraint_source",
        "//p4_constraints/frontend:constraint_kind",
        "//p4_constraints/frontend:parser",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@z3//:z3_static",
    ],
)

cc_test(
    name = "constraint_info_test",
    srcs = ["constraint_info_test.cc"],
    deps = [
        ":constraint_info",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
    ],
)
