load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

cc_binary(
    name = "p4check",
    srcs = ["p4check.cc"],
    deps = [
        "//p4_constraints/backend:constraint_info",
        "//p4_constraints/backend:interpreter",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/flags:usage",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@protobuf",
        "@protobuf//src/google/protobuf/io",
    ],
)
