load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

cc_binary(
    name = "p4check",
    srcs = ["p4check.cc"],
    deps = [
        "//p4_constraints/backend:constraint_info",
        "//p4_constraints/backend:interpreter",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_protobuf",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@protobuf//src/google/protobuf/io",
    ],
)
